# notifier-bot

./: .env.example  .gitignore  Cargo.toml  README.md  askama.toml  test.json
src/: bot_interface.rs  config.rs  deadline_worker.rs  error.rs  main.rs  sender.rs  worker.rs  xlsx.rs
src/adapters/: mailer.rs  mod.rs
src/adapters/amo/: amo_types.rs  city_impl.rs  error.rs  format_impl.rs  mod.rs
src/adapters/amo/data_types/: leads.rs  mod.rs  pipeline.rs
src/adapters/mailer/: data_types.rs  mod.rs
src/adapters/profit/: error.rs  mod.rs
src/adapters/profit/data_types/: auth.rs  deal.rs  mod.rs  profit_data.rs
src/model/: deadline.rs  deal.rs  mod.rs  stat.rs  sync.rs
templates/: new_objects.html  stat_tmpl.html  template.html
