[package]
name = "tg-bot"
version = "0.1.1"
authors = ["Andrey Khalepov <w54661c@gmail.com>"]
edition = "2024"

[dependencies]
teloxide = { git = "https://github.com/teloxide/teloxide/", features = ["macros"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.5"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cron = "0.15"
chrono = "0.4"
mail-send = "0.5"
