[package]
name = "tg-bot"
version = "0.2.1"
authors = ["Andrey Khalepov <w54661c@gmail.com>"]
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.5"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "socks"] }
serde = { version = "1", features = ["derive"] }
cron = "0.16"
chrono = "0.4"
askama = "0.15"
rust_xlsxwriter = "0.94"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "tls-rustls-ring", "sqlite", "chrono", "migrate", "derive"] }
mail-send = { version = "0.6", default-features = false, features = ["ring", "builder"] }
